test: WinningNumberSet에 대한 테스트 추가